# haptic-exploration

./: .gitignore  CMakeLists.txt  package.xml  requirements.txt  setup.py
assets/: exploration_base_composition_world.xml  exploration_mocap_composition_world.xml  mocap_myrmex.xml
assets/xacro/: generic_ycb_exploration.xml.xacro  myrmex_mocap.xml.xacro  object.xml.xacro  panda_myrmex.urdf.xacro  panda_myrmex.xml.xacro
config/: exploration_mocap_mjplugin_config.yaml  exploration_panda_mjplugin_config.yaml  panda_hw_config.yaml
experiments/: epoch_stats.pkl
launch/: exploration_mocap_composition.launch  record_ycb_data.launch  run_panda_glancer.launch
saved_models/ycb/cls/: weights_2024_02_21_17-13-34_HapticTransformer_cls_pretrained_random_0_8
scripts/: collect_data_distributed.sh  experiments.py  run.py  sample_data_table.py  spec.py  ycb_download.py  ycb_recorder
src/haptic_exploration/: actions.py  actor_critic.py  composite.py  config.py  data.py  environment.py  generation.py  glance_controller.py  glance_parameters.py  ml_util.py  model.py  mujoco_config.py  object_controller.py  object_sets.py  panda_controller.py  preprocessing.py  ros_client.py  sample.py  train_cls.py  util.py  visualization.py
