<?xml version="1.0"?>
<package format="2">
  <name>haptic_exploration</name>
  <version>0.0.1</version>
  <description>The haptic_exploration package</description>

  <maintainer email="cniemann@techfak.de">Christopher Niemann</maintainer>

  <author email="cniemann@techfak.de">Christopher Niemann</author>
  <author email="dleins@techfak.de">David Leins</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/haptic_exploration</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mujoco_ros</build_depend>
  <build_depend>mujoco_contact_surface_sensors</build_depend>
  <build_depend>mujoco_ros_mocap</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mujoco_ros</build_export_depend>
  <build_export_depend>mujoco_contact_surface_sensors</build_export_depend>
  <build_export_depend>mujoco_ros_mocap</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mujoco_ros</exec_depend>
  <exec_depend>mujoco_contact_surface_sensors</exec_depend>
  <exec_depend>mujoco_ros_mocap</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
